--- a/ux.html
+++ b/ux.html
@@ -41,8 +41,18 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1941157'>Job Application for Senior UX Designer at Lightspeed ENG</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Intelerad/743999698642889-ux-analyst-and-designer'>Intelerad UX Analyst And Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://usabilla.recruitee.com/o/ux-designer-mediorsenior'>
+      UX Designer (Medior-Senior) - Usabilla
+    </a></h5> 
+<p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1941157'>Job Application for Senior UX Designer at Lightspeed ENG</a></h5> 
+<p><span class="badge badge-light">Amsterdam, NL  ?  ?  Amsterdam</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://dribbble.com/jobs/17223-UI-UX-Designer-m-w-d?source=twitter'>
@@ -89,7 +99,7 @@
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999698617608-head-of-ui-ux-product-design-profitable-saas-company-150k-200k-equity-401-k-match-pto-flexible-work-schedule-plus-more-'>IT Pros Head of UI/UX Product Design - Profitable SaaS Company ($150K-$200K / Equity / 401(K) Match / PTO / Flexible Work Schedule / Plus More) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999698617608-head-of-ui-ux-product-design-profitable-saas-company-150k-200k-equity-401-k-match-pto-flexible-work-schedule-plus-more-'>IT Pros Head of UI/UX Product Design - Profitable SaaS Company ($150K-$200K / Equity / 401(K) Match / PTO / Flexible Work Schedule / Plus More) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -101,7 +111,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://helloprint.recruitee.com/l/fr/o/uiux-designer-internship-rotterdam'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloprint.recruitee.com/l/fr/o/uiux-designer-internship-rotterdam'>
       UI/UX Designer Internship - Helloprint
     </a></h5> 
 <p><span class="badge badge-light">Rotterdam</span></p>
@@ -143,7 +153,7 @@
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.technicondesign.com/index.php/jobs/detail/1455/3'>UX/UI Designer  Automotive Job, Gothenburg, Sweden | Technicon Design</a></h5> 
+<h5><a href='https://www.technicondesign.com/index.php/jobs/detail/1455/3'>UX/UI Designer  Automotive Job, Gothenburg, Sweden | Technicon Design</a></h5> 
 <p><span class="badge badge-light">Gothenburg, Sweden Gothenburg, Sweden</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -233,7 +243,7 @@
 <p><span class="badge badge-light">Seattle, Washington  Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698531330-designer-ui-ux-ubisoft-club-'>Ubisoft Designer UI/UX (Ubisoft Club) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698531330-designer-ui-ux-ubisoft-club-'>Ubisoft Designer UI/UX (Ubisoft Club) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -287,7 +297,7 @@
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.technicondesign.com/index.php/jobs/detail/1454/3'>Senior UX Designer Automotive Job, Frankfurt area, Germany | Technicon Design</a></h5> 
+<h5><a href='https://www.technicondesign.com/index.php/jobs/detail/1454/3'>Senior UX Designer Automotive Job, Frankfurt area, Germany | Technicon Design</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -315,7 +325,7 @@
 <p><span class="badge badge-light">Brazil  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/sugarcrm/job/oXAqbfwS'>SugarCRM Careers - Senior UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/sugarcrm/job/oXAqbfwS'>SugarCRM Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -333,7 +343,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/21724-UX-UI-Designer?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/21724-UX-UI-Designer?source=twitter'>
       UX / UI Designer at Lighthouse London - London, UK - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">London London</span></p>
@@ -371,11 +381,11 @@
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qYS9VfwE&k=Job&j=ousLafwB&__jvst=Employee+Referral&__jvsd=sLMJxgwy&__jvsc=Twitter&bid=nea8nMwa'>Curriculum Associates Careers - Senior UX Researcher</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qYS9VfwE&k=Job&j=ousLafwB&__jvst=Employee+Referral&__jvsd=sLMJxgwy&__jvsc=Twitter&bid=nea8nMwa'>Curriculum Associates Careers - Senior UX Researcher</a></h5> 
 <p><span class="badge badge-light">North Billerica, Massachusetts  Brooklyn, NY</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=o9HIafws&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=nUR6nMwv'>Jobvite, Inc. Careers - Senior UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=o9HIafws&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=nUR6nMwv'>Jobvite, Inc. Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -421,7 +431,7 @@
 <p><span class="badge badge-light">Littleton, CO, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=ougkbfwZ&__jvst=Employee+Referral&__jvsd=sjhePhwp&__jvsc=Twitter&bid=nEbQnMwj'>WP Engine Careers - Senior Director, User Experience - UX</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=ougkbfwZ&__jvst=Employee+Referral&__jvsd=sjhePhwp&__jvsc=Twitter&bid=nEbQnMwj'>WP Engine Careers - Senior Director, User Experience - UX</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -463,17 +473,7 @@
 <p><span class="badge badge-light">Austin, Texas United States  Austin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://mycujootv.recruitee.com/o/senior-ux-designer'>
-      Senior UX Designer - MyCujoo
-    </a></h5> 
-<p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://nordcloud-poland.breezy.hr/p/089938b7306b01-ux-designer'>UX Designer at Nordcloud Poland</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
